test_errors.txt
   Compiling neura_qbft_core v0.1.0 (/home/peastew/src/neura-reth/crates/neura-qbft)
error[E0432]: unresolved import `crate::types::Address`
 --> crates/neura-qbft/src/state/round_state.rs:2:57
  |
2 | use crate::types::{ConsensusRoundIdentifier, QbftBlock, Address};
  |                                                         ^^^^^^^ no `Address` in `types`
  |
  = help: consider importing this struct instead:
          alloy_primitives::Address

warning: unused import: `HashSet`
 --> crates/neura-qbft/src/state/round_state.rs:4:33
  |
4 | use std::collections::{HashMap, HashSet}; // Using HashMap for messages to store by author
  |                                 ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0609]: no field `proposal_digest` on type `&prepare_payload::PreparePayload`
  --> crates/neura-qbft/src/state/round_state.rs:95:34
   |
95 |             if prepare.payload().proposal_digest != current_digest {
   |                                  ^^^^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `round_identifier`, `digest`

warning: variable does not need to be mutable
    --> crates/neura-qbft/src/validation/proposal_validator.rs:3084:13
     |
3084 |         let mut prepared_block_r2 = default_qbft_block( // Made block mutable
     |             ----^^^^^^^^^^^^^^^^^
     |             |
     |             help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` on by default

Some errors have detailed explanations: E0432, E0609.
For more information about an error, try `rustc --explain E0432`.
warning: `neura_qbft_core` (lib test) generated 2 warnings
error: could not compile `neura_qbft_core` (lib test) due to 2 previous errors; 2 warnings emitted
